syntax = "proto3";

option go_package = "krown/services/genproto/protouser";

service AuthService {
    rpc ValidateAuth(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string Token = 1;
}

message AuthResponse {
    bool Valid = 1;
    AuthClaims Claims = 2;
}

message AuthClaims {
    string Username = 1;
    string Email = 2;
}